# dotfiles

./: .bash_aliases  .bash_logout  .bashrc  .gitconfig  .gitignore  .my_commands.sh  .vimrc  .vscodevimrc  .zshrc  backup.sh  starship.toml  windows-terminal-settings.json
.config/coc/: memos.json
.config/configstore/: update-notifier-npm.json
.config/nvim/: .netrwhist  coc-settings.json  init.vim
_nvim/: .netrwhist  coc-settings.json
_nvim/.citation-cache/: better-bibtex.sqlite
_nvim/general/: settings.vim
_nvim/plug-config/: coc.vim  lightline.vim  nerdcommenter.vim  pencil.vim  vimgo.vim  whichkey.vim
_nvim/themes/: nord.vim
coc/: commands  list-commands-history.json  list-extensions-history.json  list-lists-history.json  lists  memos.json  snippets-mru
coc/extensions/: db.json  package.json
configstore/: firebase-tools.json  update-notifier-gatsby-cli.json  update-notifier-npm.json
gatsby/: config.json  events.json
nvim/: coc-settings.json  init.vim
nvim/.citation-cache/: citation_vim_cache
nvim/general/: settings.vim
nvim/keys/: mappings.vim
nvim/plug-config/: alpha.vim  autopairs.vim  bufferline.vim  citation.vim  coc.vim  comment.vim  dashboard.vim  hop.vim  indentline.vim  (+8 more)
project-templates/python/: .gitignore  .pre-commit-config.yaml  Makefile  commitlint.config.js  create.mjs  create_py.sh  emoji.commitlint.config.js  pyproject.toml  pyrightconfig.json
project-templates/python/src/: __main__.py  cli.py
ranger/: rc.conf  rifle.conf
shell/: .bash_aliases  .bashrc  .dircolors  .tmux.conf
stripe/: config.toml
wslu/: baseexec
(+56 files in other folders)
