[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Julian Stephens <julian@julianstephens.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.306"
isort = "^5.12.0"
flake8 = "^6.0.0"
pydocstyle = "^6.3.0"
mypy = "^1.2.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
